<resources>
    <string-array name="bundesländer">
        <item>Tirol</item>
        <item>Wien</item>
        <item>Salzburg</item>
        <item>Steiermark</item>
        <item>Vorarlberg</item>
        <item>Oberösterreich</item>
        <item>Niederösterreich</item>
        <item>Kärnten</item>
        <item>Burgenland</item>

        <item>Tirol</item>
        <item>Wien</item>
        <item>Salzburg</item>
        <item>Steiermark</item>
        <item>Vorarlberg</item>
        <item>Oberösterreich</item>
        <item>Niederösterreich</item>
        <item>Kärnten</item>
        <item>Burgenland</item>

        <item>Tirol</item>
        <item>Wien</item>
        <item>Salzburg</item>
        <item>Steiermark</item>
        <item>Vorarlberg</item>
        <item>Oberösterreich</item>
        <item>Niederösterreich</item>
        <item>Kärnten</item>
        <item>Burgenland</item>

        <item>Tirol</item>
        <item>Wien</item>
        <item>Salzburg</item>
        <item>Steiermark</item>
        <item>Vorarlberg</item>
        <item>Oberösterreich</item>
        <item>Niederösterreich</item>
        <item>Kärnten</item>
        <item>Burgenland</item>
    </string-array>

    <string-array name="description">
        <item>Derzeit 1245 Aktive Fälle</item>
        <item>Derzeit 8320 Aktive Fälle</item>
        <item>Derzeit 1613 Aktive Fälle</item>
        <item>Derzeit 3093 Aktive Fälle</item>
        <item>Derzeit 4854 Aktive Fälle</item>
        <item>Derzeit 3723 Aktive Fälle</item>
        <item>Derzeit 5225 Aktive Fälle</item>
        <item>Derzeit 2126 Aktive Fälle</item>
        <item>Derzeit 8362 Aktive Fälle</item>

        <item>Derzeit 1244 Aktive Fälle</item>
        <item>Derzeit 8323 Aktive Fälle</item>
        <item>Derzeit 1613 Aktive Fälle</item>
        <item>Derzeit 3090 Aktive Fälle</item>
        <item>Derzeit 4853 Aktive Fälle</item>
        <item>Derzeit 3729 Aktive Fälle</item>
        <item>Derzeit 5225 Aktive Fälle</item>
        <item>Derzeit 2126 Aktive Fälle</item>
        <item>Derzeit 8366 Aktive Fälle</item>

        <item>Derzeit 1244 Aktive Fälle</item>
        <item>Derzeit 8323 Aktive Fälle</item>
        <item>Derzeit 1613 Aktive Fälle</item>
        <item>Derzeit 3090 Aktive Fälle</item>
        <item>Derzeit 4853 Aktive Fälle</item>
        <item>Derzeit 3729 Aktive Fälle</item>
        <item>Derzeit 5225 Aktive Fälle</item>
        <item>Derzeit 2126 Aktive Fälle</item>
        <item>Derzeit 8366 Aktive Fälle</item>

        <item>Derzeit 1244 Aktive Fälle</item>
        <item>Derzeit 8323 Aktive Fälle</item>
        <item>Derzeit 1613 Aktive Fälle</item>
        <item>Derzeit 3090 Aktive Fälle</item>
        <item>Derzeit 4853 Aktive Fälle</item>
        <item>Derzeit 3729 Aktive Fälle</item>
        <item>Derzeit 5225 Aktive Fälle</item>
        <item>Derzeit 2126 Aktive Fälle</item>
        <item>Derzeit 8366 Aktive Fälle</item>
    </string-array>

    <string-array name="datum">
        <item>27.02.2021</item>
        <item>27.02.2021</item>
        <item>27.02.2021</item>
        <item>27.02.2021</item>
        <item>27.02.2021</item>
        <item>27.02.2021</item>
        <item>27.02.2021</item>
        <item>27.02.2021</item>
        <item>27.02.2021</item>

        <item>26.02.2021</item>
        <item>26.02.2021</item>
        <item>26.02.2021</item>
        <item>26.02.2021</item>
        <item>26.02.2021</item>
        <item>26.02.2021</item>
        <item>26.02.2021</item>
        <item>26.02.2021</item>
        <item>26.02.2021</item>

        <item>25.02.2021</item>
        <item>25.02.2021</item>
        <item>25.02.2021</item>
        <item>25.02.2021</item>
        <item>25.02.2021</item>
        <item>25.02.2021</item>
        <item>25.02.2021</item>
        <item>25.02.2021</item>
        <item>25.02.2021</item>

        <item>24.02.2021</item>
        <item>24.02.2021</item>
        <item>24.02.2021</item>
        <item>24.02.2021</item>
        <item>24.02.2021</item>
        <item>24.02.2021</item>
        <item>24.02.2021</item>
        <item>24.02.2021</item>
        <item>24.02.2021</item>
    </string-array>




    <string name="app_name">Corona Info</string>
    <string name="ButtonText1">Get latest Infos</string>
    <string name="ButtonTextInfoCases">current cases</string>
    <string name="buttonSettings">Settings</string>
    <string name="buttonInfo">Info</string>
    <string name="Ampel1">Local restriction</string>
    <string name="Ampel2">color:</string>

    <string name="notificationTirol">Notification Tirol</string>
    <string name="notificationTirolBeschreibung">In Tirol is gerade wieder eine Ausgangssperre</string>


    <string name="quote1"> Stay positive cause you are not negative</string>
    <string name="quote2"> I am not buying a 2021 planner until i see a trailer</string>
    <string name="quote3"> Apparently this year is written by Stephen King</string>
    <string name="quote4"> I will not add year 2020 to my age cause I did not use it</string>
    <string name="quote5"> Roses are red, March is grey, I hope we can leave our houses in May</string>


    <string name="textVorarlberg">Vorarlberg</string>
    <string name="textTirol">Tirol</string>
    <string name="textSalzburg">Salzburg</string>
    <string name="textOberÖsterreich">Oberösterreich</string>
    <string name="textNiederÖsterreich">Niederösterreich</string>
    <string name="textWien">Wien</string>
    <string name="textBurgenland">Burgenland</string>
    <string name="textKärnten">Kärnten</string>
    <string name="textSteiermark">Steiermark</string>


    <string-array name="quotes">
        <item>@string/quote1</item>
        <item>@string/quote2</item>
        <item>@string/quote3</item>
        <item>@string/quote4</item>
        <item>@string/quote5</item>
    </string-array>

    <string name="title_activity_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>